# Blossom

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  compile_flags.txt  imgui.ini  main.c  main.cpp
.cache/clangd/index/: Controller.cpp.51F1DBF89A359752.idx  Controller.h.EBA655AEF7DD575A.idx  main.c.8FBD6AA5A047EE2B.idx  main.cpp.1B1FF871C8C105FE.idx
.opencode/agents/: game-coder.md
NewTest/: run.ps1
NewTest/src/: AnimationHandler.cpp  AnimationHandler.hpp  Controller.cpp  Controller.hpp
include/: animation.hpp  camera.hpp  controller.hpp  gui.hpp  math.hpp  tilemap.hpp
include/glad/: gl.h
shaders/: fragment.frag  shader.frag  vertex.vert
src/: AnimationHandler.hpp  Controller.hpp  LevelManager.hpp  animation.c  controller.c  gl.c  gui.c  main.c  main.cpp  tilemap.c
src/headers/: animation.h  controller.h  gui.h  tilemap.h
